--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "glob": "^11.0.1",
+    "gray-matter": "^4.0.3",
     "lru-cache": "^11.0.2",
     "next": "15.2.3",
     "openai": "^4.89.0",
