--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "glob": "^11.0.1",
     "gray-matter": "^4.0.3",
     "lru-cache": "^11.0.2",
