feat: implementa cron de scrape automático via /api/scrape

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignorar os conteúdos que são gerados no Vercel
+public/posts.json
+content/
