feat: implementa cron de scrape automático via /api/scrape

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
+    "version": 2,
     "cron": [
       {
         "path": "/api/scrape",
-        "schedule": "0 * * * *" 
+        "schedule": "0 * * * *"
       }
     ]
   }
