--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
-{
-    "crons": [
-      {
-        "path": "/api/scrape",
-        "schedule": "0 * * * *"
-      }
-    ]
+  {
+    "crons": [{
+      "path": "/api/scrape",
+      "schedule": "0 * * * *"
+    }]
   }
