--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Comita os novos posts
         run: |
           git config --global user.email "bot@github.com"
-          git config --global user.name "GitHub Bot"
-          git add .
-          git commit -m "🤖 Atualiza posts automaticamente"
-          git push
+          git config --global user.name "github-bot"
+          git add content/ public/posts.json
+          git commit -m "Atualiza posts automaticamente" || exit 0
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/Pablomoura/blog-geek-auto.git HEAD:main
