fix: remove posts.json e content do .gitignore para permitir commits automáticos

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -38,5 +38,6 @@ jobs:
       - name: Comita novos posts
         run: |
           git add content/ public/posts.json
-          git commit -m "🤖 Atualiza posts automaticamente" || echo "Nada para commitar"
+          git commit -m "Atualiza posts automaticamente" || echo "Nada para commitar"
+          git pull --rebase origin main
           git push origin main
