--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gray-matter": "^4.0.3",
     "lru-cache": "^11.0.2",
     "next": "15.2.3",
+    "next-themes": "^0.4.6",
     "openai": "^4.89.0",
     "puppeteer": "^24.4.0",
     "puppeteer-extra": "^3.3.6",
