--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -37,7 +37,8 @@ jobs:
 
       - name: Comita novos posts
         run: |
-          git add content/ public/posts.json
-          git commit -m "Atualiza posts automaticamente" || echo "Nada para commitar"
-          git pull --rebase origin main
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -f content/ public/posts.json
+          git commit -m "🤖 Atualiza posts automaticamente" || echo "Nada para commitar"
           git push origin main
