--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "glob": "^11.0.1",
+    "googleapis": "^148.0.0",
     "gray-matter": "^4.0.3",
     "lru-cache": "^11.0.2",
     "next": "15.2.3",
