--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -14,6 +14,7 @@ jobs:
 
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
 
     steps:
       - name: Clona o repositório
