--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-next": "15.2.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
