feat: adiciona banner de cookies com link para política de privacidade

--- a/.github/workflows/atualiza-banners.yml
+++ b/.github/workflows/atualiza-banners.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Instala dependências
         run: npm ci
+        env:
+         PUPPETEER_SKIP_DOWNLOAD: "true"
 
       - name: Executa script de atualização dos banners
         run: npx tsx scripts/atualiza-banners.ts
