--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "glob": "^11.0.1",
     "googleapis": "^148.0.0",
     "gray-matter": "^4.0.3",
+    "isomorphic-dompurify": "^2.22.0",
     "lru-cache": "^11.0.2",
+    "marked": "^15.0.7",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "openai": "^4.89.0",
