--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog-geek-auto",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -26,7 +27,8 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "twitter-api-v2": "^1.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
