--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
+    "contentful": "^11.5.11",
     "dotenv": "^16.4.7",
     "glob": "^11.0.1",
     "googleapis": "^148.0.0",
@@ -26,12 +27,19 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "rimraf": "^6.0.1",
+    "styled-components": "^6.1.16",
+    "tinacms": "^2.7.3",
     "twitter-api-v2": "^1.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.15",
+    "@tinacms/cli": "^1.9.3",
+    "@types/eslint": "^9.6.1",
+    "@types/eslint-scope": "^3.7.7",
     "@types/node": "^20",
     "@types/puppeteer": "^7.0.4",
     "@types/react": "^19",
@@ -39,6 +47,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "eslint-scope": "^8.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
     "tsx": "^4.19.3",
