add redes sociais

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "glob": "^11.0.1",
     "googleapis": "^148.0.0",
     "gray-matter": "^4.0.3",
+    "htmlparser2": "^10.0.0",
     "isomorphic-dompurify": "^2.22.0",
     "lru-cache": "^11.0.2",
     "marked": "^15.0.7",
@@ -40,6 +41,7 @@
     "@tinacms/cli": "^1.9.3",
     "@types/eslint": "^9.6.1",
     "@types/eslint-scope": "^3.7.7",
+    "@types/htmlparser2": "^3.10.7",
     "@types/node": "^20",
     "@types/puppeteer": "^7.0.4",
     "@types/react": "^19",
