--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "glob": "^11.0.1",
     "googleapis": "^148.0.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "htmlparser2": "^10.0.0",
     "isomorphic-dompurify": "^2.22.0",
     "lru-cache": "^11.0.2",
     "marked": "^15.0.7",
+    "marked-gfm-heading-id": "^4.1.1",
+    "marked-highlight": "^2.2.1",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "openai": "^4.89.0",
