--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "marked-highlight": "^2.2.1",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
+    "node-html-parser": "^7.0.1",
     "openai": "^4.89.0",
     "puppeteer": "^24.4.0",
     "puppeteer-extra": "^3.3.6",
