--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-markdown": "^10.1.0",
     "remove-accents": "^0.5.0",
     "rimraf": "^6.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.16",
     "tinacms": "^2.7.3",
     "twitter-api-v2": "^1.22.0"
