--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "htmlparser2": "^10.0.0",
     "isomorphic-dompurify": "^2.22.0",
     "lru-cache": "^11.0.2",
+    "lucide-react": "^0.487.0",
     "marked": "^15.0.7",
     "marked-gfm-heading-id": "^4.1.1",
     "marked-highlight": "^2.2.1",
@@ -39,6 +40,7 @@
     "rimraf": "^6.0.1",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.16",
+    "swiper": "^11.2.6",
     "tinacms": "^2.7.3",
     "twitter-api-v2": "^1.22.0"
   },
