--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tinacms/cli": "^1.9.3",
     "@types/eslint": "^9.6.1",
     "@types/eslint-scope": "^3.7.7",
+    "@types/fs-extra": "^11.0.4",
     "@types/htmlparser2": "^3.10.7",
     "@types/node": "^20",
     "@types/puppeteer": "^7.0.4",
