--- a/.github/workflows/cache-diario.yml
+++ b/.github/workflows/cache-diario.yml
@@ -19,10 +19,11 @@ jobs:
       - name: ⚙️ Gerar cache de posts
         run: npm run gerar-cache
 
-      - name: ✅ Commit e push do cache
+      - name: Commit e push do cache
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/cache-posts.json
-          git diff --cached --quiet || git commit -m "Atualiza cache de posts diariamente"
-          git push
+          git add .
+          git commit -m "Atualiza cache de posts diariamente"
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/Pablomoura/blog-geek-auto.git HEAD:main
+      
