--- a/.github/workflows/cache-diario.yml
+++ b/.github/workflows/cache-diario.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: 📥 Checkout do código
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }}
 
       - name: 📦 Instalar dependências
         run: npm install
