--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "marked-gfm-heading-id": "^4.1.1",
     "marked-highlight": "^2.2.1",
     "next": "15.2.3",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
     "openai": "^4.89.0",
