--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "publish-md": "node scripts/publish-md.js",
     "build:cache": "node scripts/build-html-cache.js",
-    "build": "npm run build:cache && next build"
+    "build": "npm run build:cache && next build",
+    "rss": "node scripts/gerar-rss.js"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -41,6 +42,7 @@
     "react-markdown": "^10.1.0",
     "remove-accents": "^0.5.0",
     "rimraf": "^6.0.1",
+    "rss": "^1.2.2",
     "slugify": "^1.6.6",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
