--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -3,7 +3,7 @@ name: Scrape automático
 on:
   workflow_dispatch: # permite rodar manualmente
   schedule:
-    - cron: '0 * * * *' # roda 1x por dia às 03:00 UTC (0h no Brasil)
+    - cron: '0 * * * *' # roda a cada hora
 
 permissions:
   contents: write # permite push com GITHUB_TOKEN
@@ -15,6 +15,10 @@ jobs:
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+      TWITTER_APP_KEY: ${{ vars.TWITTER_APP_KEY }}
+      TWITTER_APP_SECRET: ${{ vars.TWITTER_APP_SECRET }}
+      TWITTER_ACCESS_TOKEN: ${{ vars.TWITTER_ACCESS_TOKEN }}
+      TWITTER_ACCESS_SECRET: ${{ vars.TWITTER_ACCESS_SECRET }}
 
     steps:
       - name: Clona o repositório
