--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Roda o atualizador de resumos
         run: node scripts/atualizar-resumos-md.js
 
+      - name: Roda o gerador de cache
+        run: node scripts/gerar-cache-posts.js
+
       - name: Gerar RSS
         run: npm run rss
 
