fix: corrigido erro de build e warnings de lint

--- a/.github/workflows/cache-diario.yml
+++ b/.github/workflows/cache-diario.yml
@@ -9,6 +9,16 @@ jobs:
   gerar-cache:
     runs-on: ubuntu-latest
 
+    env:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+      TWITTER_APP_KEY: ${{ vars.TWITTER_APP_KEY }}
+      TWITTER_APP_SECRET: ${{ vars.TWITTER_APP_SECRET }}
+      TWITTER_ACCESS_TOKEN: ${{ vars.TWITTER_ACCESS_TOKEN }}
+      TWITTER_ACCESS_SECRET: ${{ vars.TWITTER_ACCESS_SECRET }}
+      GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+      GOOGLE_CSE_ID: ${{ secrets.GOOGLE_CSE_ID }}
+
     steps:
       - name: 📥 Checkout do código
         uses: actions/checkout@v3
