--- a/.github/workflows/cache-diario.yml
+++ b/.github/workflows/cache-diario.yml
@@ -30,3 +30,15 @@ jobs:
 
       - name: Roda o Tweetador
         run: node scripts/tweetador.js
+
+      - name: Roda o gerador de cache
+        run: node scripts/gerar-cache-posts.js
+
+      - name: Commit e push das alterações
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/Pablomoura/blog-geek-auto.git
+          git add public/cache-banners.json
+          git commit -m "update: cache de banners atualizado automaticamente" || echo "nada para commitar"
+          git push origin main
