--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rss": "node scripts/gerar-rss.js"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "contentful": "^11.5.11",
