--- a/.github/workflows/scraper-boardgamegeek.yml
+++ b/.github/workflows/scraper-boardgamegeek.yml
@@ -1,38 +1,44 @@
-name: Scraper BoardGameGeek
+name: Scraper GeekNews
 
 on:
   schedule:
-    - cron: '0 6 * * *'  # ⏰ Executa todos os dias às 6h UTC (ajuste se quiser outro horário)
-  workflow_dispatch:  # ✅ Permite execução manual também
+    - cron: '0 6 * * *'  # ⏰ Executa todos os dias às 6h UTC
+  workflow_dispatch:  # ✅ Permite execução manual
 
 jobs:
-  run-scraper:
+  run-scrapers:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout código
+      - name: 📥 Checkout do código
         uses: actions/checkout@v4
 
-      - name: Configurar Node.js
+      - name: 🟢 Configurar Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
-      - name: Instalar dependências
+      - name: 📦 Instalar dependências
         run: npm install
 
-      - name: Executar scraper do BoardGameGeek
+      - name: 🤖 Executar scraper do BoardGameGeek
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         run: node scripts/scraper-boardgamegeek.js
 
-      - name: Commit e push das alterações
+      - name: 🤖 Executar scraper do GameSpot
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        run: node scripts/scraper-gamespot.js
+
+      - name: 💾 Commit e push das alterações
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "🤖 update: novos posts do BoardGameGeek"
+          git commit -m "🤖 update: novos posts do BoardGameGeek e GameSpot" || echo "🔄 Nada para commitar"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
