--- a/.github/workflows/cache-diario.yml
+++ b/.github/workflows/cache-diario.yml
@@ -40,5 +40,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/Pablomoura/blog-geek-auto.git
           git add public/cache-banners.json
-          git commit -m "update: cache de banners atualizado automaticamente" || echo "nada para commitar"
+          git commit -m "update: cache atualizado automaticamente" || echo "nada para commitar"
           git push origin main
