--- a/.github/workflows/scraper-boardgamegeek.yml
+++ b/.github/workflows/scraper-boardgamegeek.yml
@@ -27,18 +27,12 @@ jobs:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         run: node scripts/scraper-boardgamegeek.js
 
-      - name: 🤖 Executar scraper do GameSpot
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-        run: node scripts/scraper-gamespot.js
-
       - name: 💾 Commit e push das alterações
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "🤖 update: novos posts do BoardGameGeek e GameSpot" || echo "🔄 Nada para commitar"
+          git commit -m "🤖 update: novos posts do BoardGameGeek" || echo "🔄 Nada para commitar"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
