--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -40,6 +40,9 @@ jobs:
       - name: 🤖 Executar scraper do GameSpot RSS
         run: node scripts/scraper-gamespot.js
 
+      - name: 🤖 Executar scraper do O Vicio RSS
+        run: node scripts/scraper-ovicio.js
+
       - name: Roda o atualizador de resumos
         run: node scripts/atualizar-resumos-md.js
 
