--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -58,6 +58,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git pull --rebase origin main
           git add -f content/ public/posts.json
           git commit -m "🤖 Atualiza posts automaticamente" || echo "Nada para commitar"
           git push origin main
