--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -58,7 +58,8 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch origin main
+          git reset --soft origin/main
           git add -f content/ public/posts.json
-          git pull --rebase origin main
           git commit -m "🤖 Atualiza posts automaticamente" || echo "Nada para commitar"
-          git push origin main
+          git push origin HEAD:main
