--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "highlight.js": "^11.11.1",
     "htmlparser2": "^10.0.0",
     "isomorphic-dompurify": "^2.22.0",
+    "jsdom": "^26.1.0",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.487.0",
     "marked": "^15.0.7",
