--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "contentful": "^11.5.11",
+    "dompurify": "~2.5.4",
     "dotenv": "^16.4.7",
+    "esbuild": "^0.25.5",
     "fast-xml-parser": "^5.2.3",
     "glob": "^11.0.1",
     "googleapis": "^148.0.0",
@@ -29,12 +31,15 @@
     "htmlparser2": "^10.0.0",
     "isomorphic-dompurify": "^2.22.0",
     "jsdom": "^26.1.0",
+    "jsonpath-plus": "~10.2.0",
+    "lodash.set": "^4.3.2",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.487.0",
     "marked": "^15.0.7",
     "marked-gfm-heading-id": "^4.1.1",
     "marked-highlight": "^2.2.1",
-    "next": "15.2.3",
+    "mermaid": "~10.9.3",
+    "next": "~15.2.4",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
@@ -52,9 +57,11 @@
     "slugify": "^1.6.6",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
+    "tar-fs": "~3.0.9",
     "tinacms": "^2.7.3",
     "turndown": "^7.2.0",
-    "twitter-api-v2": "^1.22.0"
+    "twitter-api-v2": "^1.22.0",
+    "vite": "~4.5.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
