--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.15",
     "@tinacms/cli": "^1.9.3",
+    "@types/codemirror": "^5.60.16",
     "@types/eslint": "^9.6.1",
     "@types/eslint-scope": "^3.7.7",
+    "@types/estree": "^1.0.7",
     "@types/fs-extra": "^11.0.4",
     "@types/htmlparser2": "^3.10.7",
-    "@types/node": "^20",
+    "@types/node": "^20.17.57",
     "@types/puppeteer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
