--- a/.github/workflows/postar-redes-sociais.yml
+++ b/.github/workflows/postar-redes-sociais.yml
@@ -1,19 +1,36 @@
-name: 📣 Compartilhar novo post nas redes sociais
+name: 📣 Postar nas redes sociais
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # permite rodar manualmente
+  workflow_run:
+    workflows: ["Scrape automático"]
+    types:
+      - completed
 
 jobs:
-  postar:
+  postar-redes-sociais:
+    name: 🤖 Postar nas redes sociais
     runs-on: ubuntu-latest
+
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} # so se scrape deu sucesso
+
+    env:
+      FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
+      FACEBOOK_PAGE_ACCESS_TOKEN: ${{ secrets.FACEBOOK_PAGE_ACCESS_TOKEN }}
+      THREADS_USER_ID: ${{ secrets.THREADS_USER_ID }}
+      THREADS_ACCESS_TOKEN: ${{ secrets.THREADS_ACCESS_TOKEN }}
+
     steps:
-      - name: 🔄 Checkout do repositório
+      - name: 📥 Checkout do código
         uses: actions/checkout@v3
 
-      - name: 📣 Compartilhar novo post nas redes sociais
-        run: node scripts/postar-redes-sociais.js
-        env:
-            FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
-            FACEBOOK_PAGE_ACCESS_TOKEN: ${{ secrets.FACEBOOK_PAGE_ACCESS_TOKEN }}
-            THREADS_USER_ID: ${{ secrets.THREADS_USER_ID }}
-            THREADS_ACCESS_TOKEN: ${{ secrets.THREADS_ACCESS_TOKEN }}
+      - name: 🟢 Instalar Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: 📦 Instalar dependências
+        run: npm ci
+
+      - name: 🚀 Rodar script de postagem nas redes sociais
+        run: npx tsx scripts/postar-redes-sociais.js
