--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "npm run build:cache && next build",
     "sitemap:tags": "tsx scripts/gerar-sitemap-tags.ts",
     "sitemap": "tsx scripts/gerar-sitemap.ts",
-    "rss": "node scripts/gerar-rss.js"
+    "rss": "node scripts/gerar-rss.js",
+    "sitemap-top": "node scripts/gerar-sitemap-top.js"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
