--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/estree": "^1.0.7",
     "@types/fs-extra": "^11.0.4",
     "@types/htmlparser2": "^3.10.7",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.57",
     "@types/puppeteer": "^7.0.4",
     "@types/react": "^19",
