--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
+    "nodemailer": "^7.0.3",
     "openai": "^4.89.0",
     "puppeteer": "^24.4.0",
     "puppeteer-extra": "^3.3.6",
@@ -69,6 +70,7 @@
     "@types/htmlparser2": "^3.10.7",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.57",
+    "@types/nodemailer": "^6.4.17",
     "@types/puppeteer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
