--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sitemap:tags": "tsx scripts/gerar-sitemap-tags.ts",
     "sitemap": "tsx scripts/gerar-sitemap.ts",
     "rss": "node scripts/gerar-rss.js",
-    "sitemap-top": "node scripts/gerar-sitemap-top.js"
+    "sitemap-top": "node scripts/gerar-sitemap-top.js",
+    "ping-indexnow": "node scripts/ping-indexnow.js"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
