--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -67,9 +67,13 @@ jobs:
 
       - name: Comita novos posts
         run: |
-          git fetch origin main
-          git reset --soft origin/main
-          git pull --rebase origin main || echo "Rebase falhou ou não necessário"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -f content/ public/posts.json
           git commit -m "🤖 Atualiza posts automaticamente" || echo "Nada para commitar"
-          git push origin HEAD:main
+          
+          # ✅ Atualiza o branch local antes de dar push
+          git pull --rebase origin main
+
+          # ✅ Tenta push (agora com o histórico rebaseado)
+          git push origin main
