--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -54,26 +54,17 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Commit imagens salvas
-        run: |
-          git add public/uploads
-          git status
-          if git diff --cached --quiet; then
-            echo "🟡 Nenhuma imagem nova para commit."
-          else
-            git commit -m "📸 Upload de imagens salvas automaticamente"
-
-            # 🔧 Corrige o erro de push rejeitado
-            git pull --rebase origin main || echo "Nenhum rebase necessário"
-
-            git push
-          fi
-
-      - name: Comita novos posts
+      - name: Commit de imagens e posts
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
           git add -f content/ public/posts.json public/uploads/
-          git commit -m "📸 Upload de imagens salvas automaticamente" || echo "Nada para commitar"
-          git pull --rebase origin main || echo "Nenhum rebase necessário"
-          git push origin main
+          git status
+          if git diff --cached --quiet; then
+            echo "🟡 Nenhuma mudança nova para commit."
+          else
+            git commit -m "📦 Atualização automática: imagens e posts"
+            git pull --rebase origin main || echo "Nenhum rebase necessário"
+            git push origin main
+          fi
