--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ping-indexnow": "node scripts/ping-indexnow.js"
   },
   "dependencies": {
+    "@octokit/rest": "^21.1.1",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
